liveusb/config/minimal/opt/liveusb/airootfs/minimal/etc/iptables/iptables.rules
# Generated by iptables-save v1.4.21 on Mon Sep 14 08:41:43 2015
*security
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Mon Sep 14 08:41:43 2015
# Generated by iptables-save v1.4.21 on Mon Sep 14 08:41:43 2015
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Mon Sep 14 08:41:43 2015
# Generated by iptables-save v1.4.21 on Mon Sep 14 08:41:43 2015
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Mon Sep 14 08:41:43 2015
# Generated by iptables-save v1.4.21 on Mon Sep 14 08:41:43 2015
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i proxy -p udp -j REDIRECT --to-ports 9053
-A PREROUTING -i proxy -p tcp -j REDIRECT --to-ports 9050
-A POSTROUTING -o host -j MASQUERADE
COMMIT
# Completed on Mon Sep 14 08:41:43 2015
# Generated by iptables-save v1.4.21 on Mon Sep 14 08:41:43 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:CONTAINER - [0:0]
:HOST - [0:0]
:LO - [0:0]
:PROXY - [0:0]
-A INPUT -p icmp -j DROP
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED --ctproto 6 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED --ctproto 17 -j ACCEPT
-A INPUT -i lo -m conntrack --ctstate NEW -j LO
-A INPUT -i host -m conntrack --ctstate NEW -j HOST
-A INPUT -i container -m conntrack --ctstate NEW -j CONTAINER
-A INPUT -i proxy -m conntrack --ctstate NEW -j PROXY
-A INPUT -j LOG --log-prefix DROPPED --log-level 6
-A INPUT -j DROP
-A FORWARD -i host -o proxy -m conntrack --ctstate RELATED,ESTABLISHED --ctproto 17 -j ACCEPT
-A FORWARD -i host -o proxy -m conntrack --ctstate RELATED,ESTABLISHED --ctproto 6 -j ACCEPT
-A FORWARD -i host -o container -m conntrack --ctstate RELATED,ESTABLISHED --ctproto 17 -j ACCEPT
-A FORWARD -i host -o container -m conntrack --ctstate RELATED,ESTABLISHED --ctproto 6 -j ACCEPT
-A FORWARD -i host -o container -p udp -m udp --dport 31279 -j ACCEPT
-A FORWARD -i container -o host -p udp -j ACCEPT
-A FORWARD -i container -o host -p tcp -j ACCEPT
-A FORWARD -i proxy -o host -p udp -j ACCEPT
-A FORWARD -i proxy -o host -p tcp -j ACCEPT
-A CONTAINER -p udp -m udp --dport 67 -j ACCEPT
-A CONTAINER -p tcp -m tcp --dport 31279 -j ACCEPT
-A CONTAINER -p udp -m udp --dport 31279 -j ACCEPT
-A CONTAINER -j LOG --log-prefix CONTAINER --log-level 6
-A CONTAINER -j DROP
-A HOST -p tcp -m tcp --dport 31279 -j ACCEPT
-A HOST -p tcp -m tcp --dport 31297 -j ACCEPT
-A HOST -j LOG --log-prefix HOST --log-level 6
-A HOST -j DROP
-A LO -d 127.0.0.1/32 -p udp -m udp --dport 53 -j ACCEPT
-A LO -d 127.0.0.1/32 -p tcp -m tcp --dport 6010:6023 -j ACCEPT
-A LO -d 127.0.0.1/32 -p tcp -m tcp --dport 31279 -j ACCEPT
-A LO -d 127.0.0.1/32 -p tcp -m tcp --dport 31297 -j ACCEPT
-A LO -j LOG --log-prefix LO --log-level 6
-A LO -j DROP
-A PROXY -p udp -m udp --dport 67 -j ACCEPT
-A PROXY -p tcp -m tcp --dport 31279 -j ACCEPT
-A PROXY -p udp -m udp --dport 31279 -j ACCEPT
-A PROXY -p tcp -m tcp --dport 9050 -j ACCEPT
-A PROXY -p udp -m udp --dport 9053 -j ACCEPT
-A PROXY -j LOG --log-prefix PROXY --log-level 6
-A PROXY -j DROP
COMMIT
# Completed on Mon Sep 14 08:41:43 2015
